kustomize/overlays/scots-lab/apps/openspeedtest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openspeedtest
  namespace: openspeedtest
  labels:
    app: openspeedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openspeedtest
  template:
    metadata:
      labels:
        app: openspeedtest
    spec:
      containers:
        - name: openspeedtest
          image: openspeedtest/latest:v2.0.5
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 500m
              memory: 256Mi

        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
          args:
            - --provider=oidc
            - --oidc-issuer-url=https://auth.srbii.com/realms/homelab
            - --upstream=http://127.0.0.1:3000
            - --http-address=0.0.0.0:4180
            - --email-domain=*
            - --pass-user-headers=true
            - --cookie-secure=true
            - --cookie-name=_oauth2_speedtest
            - --redirect-url=https://speed.srbii.com/oauth2/callback
            - --whitelist-domain=.srbii.com
            - --skip-provider-button=true
          ports:
            - containerPort: 4180
              name: proxy
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
